--- a/app/Resources/views/inc/header.html.twig
+++ b/app/Resources/views/inc/header.html.twig
@@ -30,11 +30,11 @@
                         </ul>
                     </li>
                 </ul>
-                <ul class="nav navbar-nav navbar-right" id="menu-off">
-                    <li><a class="btn" id="loginButton">Log in</a></li>
-                    <li><a class="btn" id="registerButton">Sign up</a></li>
+                <ul class="nav navbar-nav navbar-right menu-off">
+                    <li><a class="btn loginButton">Log in</a></li>
+                    <li><a class="btn registerButton">Sign up</a></li>
                 </ul>
-                <ul class="nav navbar-nav navbar-right" id="menu-on">
+                <ul class="nav navbar-nav navbar-right menu-on">
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User <span class="caret"></span></a>
                         <ul class="dropdown-menu">
