--- a/src/AppBundle/Resources/style/_background_cover.scss
+++ b/src/AppBundle/Resources/style/_background_cover.scss
@@ -15,7 +15,7 @@
   position: relative;
   bottom: 0%;
   left: 0%;
-  height: 100%;
+  height: auto;
   width: 100%;
   overflow: hidden;
   background: #000;
@@ -38,4 +38,23 @@
 }
 .video-container video.fillWidth {
   width: 100%;
+}
+
+.video-container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+}
+
+
+.video-container .title-container {
+  z-index: 1000;
+  position: absolute;
+  top: 10px;
+  width: 100%;
+  text-align: center;
+  color: #fff;
 }
