--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -24,16 +24,16 @@
     <div class="container allign-center">
         <div class="row">
 
-             <div class="col-lg-4 col-lg-offset-4 col-sm-12 loginForm">
+         <!--    <div class="col-lg-4 col-lg-offset-4 col-sm-12 loginForm">
                 <div class="panel panel-success">
                     <div class="panel-heading">
                         Log in
                     </div>
                     <div class="panel-body">
-                        <form action="{{ path('homepage') }}" method="post" class="form-horizontal">
+                        <form action="{# path('homepage') #}" method="post" class="form-horizontal">
                             <fieldset class="form-group">
                                 <label class="control-label label-width" for="email">Email: </label>
-                                <input type="text" id="email" name="_username" value="{{ last_email }}" />
+                                <input type="text" id="email" name="_username" value="{# last_email #}" />
                             </fieldset>
                             <fieldset class="form-group">
                                 <label class="control-label label-width" for="password">Password: </label>
@@ -44,21 +44,21 @@
 
                     </div>
                     <div class="panel-footer">
-                        <div class="text-center"><b><a href="{{ path('fbConnect') }}">Login with Facebook</a></b></div>
+                        <div class="text-center"><b><a href="{# path('fbConnect') #}">Login with Facebook</a></b></div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
-            <div class="col-lg-4 col-lg-offset-4 col-sm-12 registerForm">
+         <!--   <div class="col-lg-4 col-lg-offset-4 col-sm-12 registerForm">
                 <div class="panel panel-success">
                     <div class="panel-heading">
                         Register
                     </div>
                     <div class="panel-body relative-button">
-                        <form action="{{ path('login') }}" method="post" class="form-horizontal">
+                        <form action="{# path('login') #}" method="post" class="form-horizontal">
                             <fieldset class="form-group">
                                 <label class="control-label label-width" for="email">Email: </label>
-                                <input type="text" id="email" name="_username" value="{{ last_email }}" />
+                                <input type="text" id="email" name="_username" value="{# last_email #}" />
                             </fieldset>
                             <fieldset class="form-group">
                                 <label class="control-label label-width" for="password">Password: </label>
@@ -69,7 +69,7 @@
 
                     </div>
                 </div>
-            </div>
+            </div> -->
 
         </div>
     </div>
@@ -159,6 +159,5 @@
                 </div>
             </div>
         </div>
-    </div>
     </div>
 {% endblock %}
