--- a/src/AppBundle/Resources/views/Home/question.html.twig
+++ b/src/AppBundle/Resources/views/Home/question.html.twig
@@ -7,6 +7,7 @@
                 <a title="{{ question.title }}" href="{{ path('question', {'id': question.id }) }}">{{ loop.index }}</a>
             {% endfor %}<br>
         {% endfor %}
+    <div id="clock"></div>
     {{ form_start(form) }}
     {{ form_label(form.answers) }}
     {{ form_widget(form.answers) }}
@@ -17,6 +18,7 @@
 {% block javascripts %}
     <!-- laikinai inportinu per src -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="{{ asset('js/jquery.countdown.min.js') }}"></script>
 
 <script type="text/javascript">
     $(document).ready(function () {
@@ -40,6 +42,14 @@
                 data: { 'question': {{ current }}, 'answer': answers }
             });
         });
+
+        $("#clock").countdown('{{ app.session.get('endsAt')|date('Y/m/d/H:i:s') }}', function(event) {
+                    $(this).text(
+                            event.strftime('%H:%M:%S')
+                    );
+                });
+     /*   sendAnswer("input[name='test_question[answers]']", { path('questionChosen') }}, { current }});
+        sendAnswers("input[name='test_question[answers]']", { path('questionChosen') }}, { current }});*/
     });
 </script>
 {% endblock %}
