--- a/src/AppBundle/Resources/views/Home/question.html.twig
+++ b/src/AppBundle/Resources/views/Home/question.html.twig
@@ -2,14 +2,14 @@
 
 {% block body %}
     {% for group in app.session.get('questionGroups') %}
-        <b>{{ loop.index }}.{{ group[0].book.title }}</b>
+        <b>{{ loop.index }}.{{ group[0].book.title }}</b><br>
             {% for question in group %}
                 <a title="{{ question.title }}" href="{{ path('question', {'id': question.id }) }}">{{ loop.index }}</a>
             {% endfor %}<br>
         {% endfor %}
     <div id="clock"></div>
     {{ form_start(form) }}
-    {{ form_label(form.answers) }}
+    {{ index ~ '.'}}{{ current.content|replace({'<?php' : '&#x3C;?php'})|raw }}
     {{ form_widget(form.answers) }}
     {{ form_widget(form.previous) }}
     {{ form_widget(form.next) }}
@@ -27,7 +27,7 @@
             $.ajax({
                 type: "POST",
                 url: '{{ path('questionChosen') }}',
-                data: { 'question': {{ current }}, 'answer': answer }
+                data: { 'question': {{ current.id }}, 'answer': answer }
             });
         });
 
@@ -39,7 +39,7 @@
             $.ajax({
                 type: "POST",
                 url: '{{ path('questionChosen') }}',
-                data: { 'question': {{ current }}, 'answer': answers }
+                data: { 'question': {{ current.id }}, 'answer': answers }
             });
         });
 
@@ -48,8 +48,8 @@
                             event.strftime('%H:%M:%S')
                     );
                 });
-     /*   sendAnswer("input[name='test_question[answers]']", { path('questionChosen') }}, { current }});
-        sendAnswers("input[name='test_question[answers]']", { path('questionChosen') }}, { current }});*/
+     /*   sendAnswer("input[name='test_question[answers]']", { path('questionChosen') }}, { current.id }});
+        sendAnswers("input[name='test_question[answers]']", { path('questionChosen') }}, { current.id }});*/
     });
 </script>
 {% endblock %}
