--- a/src/AppBundle/Resources/views/Home/results.html.twig
+++ b/src/AppBundle/Resources/views/Home/results.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     {% for group in app.session.get('questionGroups') %}
-        <b>{{ loop.index }}.{{ group[0].book.title }}</b>
+        <b>{{ loop.index }}.{{ group[0].book.title }}</b><br>
             {% for question in group %}
                 {% if app.session.get('isCorrect')[question.id] is not defined or not app.session.get('isCorrect')[question.id] %}
                 <a style="color: #C82829" title="{{ question.title }}" href="{{ path('testResults', {'id': question.id }) }}">{{ loop.index }}</a>
@@ -12,21 +12,21 @@
             {% endfor %}<br>
         {% endfor %}
     {{ form_start(form) }}
-    {{ form_label(form.answers) }}
+    {{ index ~ '.'}}{{ current.content|replace({'<?php' : '&#x3C;?php'})|raw }}
     {{ form_widget(form.answers) }}
     {{ form_widget(form.previous) }}
     {{ form_widget(form.next) }}
     {{ form_end(form) }}
 
-    {% if app.session.get('isCorrect')[currentQ.id] is not defined or not app.session.get('isCorrect')[currentQ.id] %}
+    {% if app.session.get('isCorrect')[current.id] is not defined or not app.session.get('isCorrect')[current.id] %}
         <p>Your choice is incorrect.</p>
         <div class="visible">
-            {{ currentQ.explanation }}
+            {{ current.explanation|replace({'<?php' : '&#x3C;?php'})|raw }}
         </div>
     {% else %}
         <p>Your choice is correct!</p>
         <div class="hidden">
-            {{ currentQ.explanation }}
+            {{ current.explanation|replace({'<?php' : '&#x3C;?php'})|raw }}
         </div>
     {% endif %}
 {% endblock %}
