button allignment fix

--- a/src/AppBundle/Resources/views/Home/404.html.twig
+++ b/src/AppBundle/Resources/views/Home/404.html.twig
@@ -1,25 +1,7 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}Homepage - {{ parent() }}{% endblock %}
+{% block title %}Error - 404{% endblock %}
 
-{% block stylesheets %}
-    <link href="https://fonts.googleapis.com/css?family=Lato:100" rel="stylesheet" type="text/css">
-    {{ parent() }}
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-weight: 100;
-            font-family: 'Lato';
-        }
-
-        .title {
-            margin: 20px auto;
-            text-align: center;
-            font-size: 96px;
-        }
-    </style>
-{% endblock %}
 
 {% block body %}
     {% for error in app.session.flashBag.get('error') %}
@@ -32,5 +14,5 @@
             {{ success }}
         </div>
     {% endfor %}
-    <div class="title">Klausimas nerastas</div>
+    <div class="titleN">Klausimas nerastas</div>
 {% endblock %}
