--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -88,7 +88,7 @@
 
                 <div class="row bungeeS">
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 allignCenter">
-                        <a href="/" class="btn-primary boldS">Zend test</a>
+                        <a href="/" class="btn btn-1 btn-1e boldS">Zend test</a>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 allignCenter">
                         <a href="/" class="btn btn-1 btn-1e  boldS">
@@ -101,13 +101,13 @@
                     </div>
                 </div>
 
-                <div class="allignCenter users-count">
-                    <h2 class="bungeeS boldS allignCenter font-40">Over</h2>
+                <div class="allign-center users-count">
+                    <h2 class="bungeeS boldS allign-center font-40">Over</h2>
                         <div class="circle allignCenter">
                             <div class="user-count font-50">0</div>
                         </div>
 
-                    <h2 class="bungeeS boldS allignCenter">users! Join us</h2>
+                    <h2 class="bungeeS boldS allign-center">users! Join us</h2>
                 </div>
 
             </div>
