--- a/src/AppBundle/Resources/views/Home/results.html.twig
+++ b/src/AppBundle/Resources/views/Home/results.html.twig
@@ -12,7 +12,7 @@
             {% endfor %}<br>
         {% endfor %}
     {{ form_start(form) }}
-    {{ index ~ '.'}}{{ current.content|replace({'<?php' : '&#x3C;?php'})|raw }}
+    {{ index ~ '.'}}{{ current.content|raw }}
     {{ form_widget(form.answers) }}
     {{ form_widget(form.previous) }}
     {{ form_widget(form.next) }}
