--- a/src/AppBundle/Resources/style/_background_cover.scss
+++ b/src/AppBundle/Resources/style/_background_cover.scss
@@ -50,12 +50,14 @@
   background: rgba(0, 0, 0, 0.4);
   width: 100%;
 }
+
 .video-container video {
   position: absolute;
   z-index: 0;
-  bottom: 0;
+  top: 0;
 }
-.video-container video.fillWidth {
+
+.video-container video.fillSpace {
   width: 100%;
 }
 
@@ -72,7 +74,6 @@
 .video-container .title-container {
   z-index: 1000;
   position: absolute;
-  top: 10px;
   width: 100%;
   text-align: center;
   color: #fff;
