--- a/app/Resources/views/inc/header.html.twig
+++ b/app/Resources/views/inc/header.html.twig
@@ -19,7 +19,7 @@
                     <li><a href="/">Basic test</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Category tests <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu position-topmost">
                             <li><a href="/customTest/1">List</a></li>
                             <li><a href="/">String</a></li>
                             <li><a href="/">Something else here</a></li>
@@ -30,22 +30,80 @@
                         </ul>
                     </li>
                 </ul>
-                <ul class="nav navbar-nav navbar-right menu-off">
-                    <li><a class="btn loginButton">Log in</a></li>
-                    <li><a class="btn registerButton">Sign up</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right menu-on">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="{{ path('keistiDuomenis') }}">Statistics</a></li>
-                            <li><a href="{{ path('login') }}">Edit profile</a></li>
-                            <li><a href="{{ path('login') }}">Log out</a></li>
-                        </ul>
-                    </li>
+                    {%  if app.user %}
+                        <ul class="nav navbar-nav navbar-right">
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ app.user.name }} <span class="caret"></span></a>
+                                <ul class="dropdown-menu position-topmost">
+                                    <li><a href="{{ path('keistiDuomenis') }}">Statistics</a></li>
+                                    <li><a href="{{ path('login') }}">Edit profile</a></li>
+                                    <li><a href="{{ path('logout') }}">Log out</a></li>
+                                </ul>
+                            </li>
 
-                </ul>
+                        </ul>
+                    {% else %}
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a class="btn loginButton">Log in</a></li>
+                            <li><a class="btn registerButton">Sign up</a></li>
+                        </ul>
+                    {% endif %}
             </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
     </nav>
+    <!--login register forms-->
+    <div class="container allign-center">
+        <div class="row">
+
+            <div class="col-lg-4 col-lg-offset-4 col-sm-12 loginForm">
+                <div class="panel panel-success">
+                    <div class="panel-heading">
+                        Log in
+                    </div>
+                    <div class="panel-body">
+                        <form action="{{  path('login') }}" method="post" class="form-horizontal">
+                            <fieldset class="form-group">
+                                <label class="control-label label-width" for="email">Email: </label>
+                                <input type="text" id="email" name="_username" value="{# last_email #}" />
+                            </fieldset>
+                            <fieldset class="form-group">
+                                <label class="control-label label-width" for="password">Password: </label>
+                                <input type="password" id="password" name="_password" />
+                            </fieldset>
+                            <button class="btn btn-4" type="submit">Log in</button>
+                        </form>
+
+                    </div>
+                    <div class="panel-footer">
+                        <div class="text-center"><b><a href="{{ path('fbConnect') }}">Login with Facebook</a></b></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-lg-offset-4 col-sm-12 registerForm">
+                <div class="panel panel-success">
+                    <div class="panel-heading">
+                        Register
+                    </div>
+                    <div class="panel-body relative-button">
+                        <form action="{{  path('register') }}" method="post" class="form-horizontal">
+                            <fieldset class="form-group">
+                                    <div><label for="user_username" class="required">Username</label><input type="text" id="user_username" name="user[username]" required="required" /></div>
+                                    <div><label for="user_email" class="required">Email</label><input type="email" id="user_email" name="user[email]" required="required" /></div>
+                                    <div><label for="user_name" class="required">Name</label><input type="text" id="user_name" name="user[name]" required="required" /></div>
+                                    <div><label for="user_surname">Surname</label><input type="text" id="user_surname" name="user[surname]" /></div>
+                                    <div><label for="user_password_first" class="required">First</label><input type="password" id="user_password_first" name="user[password][first]" required="required" /></div>
+                                    <div><label for="user_password_second" class="required">Second</label><input type="password" id="user_password_second" name="user[password][second]" required="required" /></div>
+                                    <div><label for="user_termsAccepted" class="required">Terms accepted</label><input type="checkbox" id="user_termsAccepted" name="user[termsAccepted]" required="required" value="1" /></div>
+
+                            </fieldset>
+                            <button class="btn btn-4" type="submit">Register!</button>
+                            <input type="hidden" id="user__token" name="user[_token]" value="DlbX6JSfHASgAlA5QuYO8wzmFCEyikq-VPzo9Edseko" />
+                        </form>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
 </header>
