--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -18,66 +18,10 @@
         </div>
     {% endfor %}
 
-
-
-    <!--login register forms-->
-    <div class="container allign-center">
-        <div class="row">
-
-         <!--    <div class="col-lg-4 col-lg-offset-4 col-sm-12 loginForm">
-                <div class="panel panel-success">
-                    <div class="panel-heading">
-                        Log in
-                    </div>
-                    <div class="panel-body">
-                        <form action="{# path('homepage') #}" method="post" class="form-horizontal">
-                            <fieldset class="form-group">
-                                <label class="control-label label-width" for="email">Email: </label>
-                                <input type="text" id="email" name="_username" value="{# last_email #}" />
-                            </fieldset>
-                            <fieldset class="form-group">
-                                <label class="control-label label-width" for="password">Password: </label>
-                                <input type="password" id="password" name="_password" />
-                            </fieldset>
-                            <button class="btn btn-4" type="submit">Log in</button>
-                        </form>
-
-                    </div>
-                    <div class="panel-footer">
-                        <div class="text-center"><b><a href="{# path('fbConnect') #}">Login with Facebook</a></b></div>
-                    </div>
-                </div>
-            </div> -->
-
-         <!--   <div class="col-lg-4 col-lg-offset-4 col-sm-12 registerForm">
-                <div class="panel panel-success">
-                    <div class="panel-heading">
-                        Register
-                    </div>
-                    <div class="panel-body relative-button">
-                        <form action="{# path('login') #}" method="post" class="form-horizontal">
-                            <fieldset class="form-group">
-                                <label class="control-label label-width" for="email">Email: </label>
-                                <input type="text" id="email" name="_username" value="{# last_email #}" />
-                            </fieldset>
-                            <fieldset class="form-group">
-                                <label class="control-label label-width" for="password">Password: </label>
-                                <input type="password" id="password" name="_password" />
-                            </fieldset>
-                            <button class="btn btn-4" type="submit">Register</button>
-                        </form>
-
-                    </div>
-                </div>
-            </div> -->
-
-        </div>
-    </div>
-
     <!--great cover-->
-    <div class="homepage-hero-module jumbotron">
+    <div class="homepage-hero-module ">
         <div class="video-container">
-            <video preload="auto" autoplay loop class="fillWidth" poster="{{ asset('background/Hello-World.jpg') }}">
+            <video preload="auto" autoplay loop class="fillSpace" poster="{{ asset('background/Hello-World.jpg') }}">
                 <source src="{{ asset('background/Hello-World.mp4') }}" type="video/mp4" />
                 <source src="{{ asset('background/Hello-World.webm') }}" type="video/webm" />
                 <source src="{{ asset('background/Hello-World.ogg') }}" type="video/ogg" />
