updated user entity

--- a/src/AppBundle/Resources/views/Home/question.html.twig
+++ b/src/AppBundle/Resources/views/Home/question.html.twig
@@ -4,7 +4,11 @@
     {% for group in app.session.get('questionGroups') %}
         <b>{{ loop.index }}.{{ group[0].book.title }}</b><br>
             {% for question in group %}
-                <a title="{{ question.title }}" href="{{ path('question', {'id': question.id }) }}">{{ loop.index }}</a>
+                {% if question.id == current.id %}
+                    <b><a title="{{ question.title }}" href="{{ path('question', {'id': question.id }) }}">{{ loop.index }}</a></b>
+                {% else %}
+                    <a title="{{ question.title }}" href="{{ path('question', {'id': question.id }) }}">{{ loop.index }}</a>
+                {% endif %}
             {% endfor %}<br>
         {% endfor %}
     <div id="clock"></div>
