--- a/src/AppBundle/Resources/views/Home/question.html.twig
+++ b/src/AppBundle/Resources/views/Home/question.html.twig
@@ -14,7 +14,13 @@
     <div id="clock"></div>
     {{ form_start(form) }}
     {{ index ~ '.'}}{{ current.content|replace({'<?php' : '&#x3C;?php'})|raw }}
-    {{ form_widget(form.answers) }}
+
+    {% for answer in form.answers %}
+        {{ loop.index }}{{ form_widget(answer) }}
+        {{ form_label(answer)|replace({"&lt;" : "<", "&gt;" : ">"})|raw }}
+        <br>
+    {% endfor %}
+
     {{ form_widget(form.previous) }}
     {{ form_widget(form.next) }}
     {{ form_end(form) }}
