fixed issue with test time / twig rendering / only custom tests are now being tracked

--- a/src/AppBundle/Resources/views/Home/results.html.twig
+++ b/src/AppBundle/Resources/views/Home/results.html.twig
@@ -16,7 +16,7 @@
 
     {% for answer in form.answers %}
         {{ loop.index }}{{ form_widget(answer) }}
-        {{ form_label(answer)|replace({"&lt;" : "<", "&gt;" : ">"})|raw }}
+        {{ form_label(answer)|replace({"&lt;" : "<", "&gt;" : ">", "&amp;" : "&"})|raw }}
         <br>
     {% endfor %}
 
