min-height for cover fixed elements out of bounds

--- a/app/Resources/views/inc/header.html.twig
+++ b/app/Resources/views/inc/header.html.twig
@@ -45,7 +45,7 @@
                     {% else %}
                         <ul class="nav navbar-nav navbar-right">
                             <li><a class="btn loginButton">Log in</a></li>
-                            <li><a href="{{ path("register") }}" class="btn registerButton">Sign up</a></li>
+                            <li><a class="btn registerButton">Sign up</a></li>
                         </ul>
                     {% endif %}
             </div><!--/.nav-collapse -->
