--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -19,9 +19,26 @@
         {% block header %}
             {% include "::inc/header.html.twig" %}
         {% endblock %}
-
     {% endblock %}
 </div>
+<div class="container">
+    {% for error in app.session.flashBag.get('error') %}
+        <div class="alert alert-danger">
+            {{ error }}
+        </div>
+    {% endfor %}
+    {% for success in app.session.flashBag.get('success') %}
+        <div class="alert alert-success">
+            {{ success }}
+        </div>
+    {% endfor %}
+    {% for alert in app.session.flashBag.get('alert') %}
+        <div class="alert alert-warning">
+            {{ alert }}
+        </div>
+    {% endfor %}
+</div>
+
 {% block body %}{% endblock %}
 {% block footer %}
 {% include "::inc/footer.html.twig" %}
